# Rust-Zero-to-Production

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health.rs
