[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alex Roman <romanalexrares@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
config = "0.15.19"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.21"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4.43"
tracing = { version = "0.1.44", features = ["log"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.22", features = [
  "registry",
  "env-filter",
] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

[dev-dependencies]
reqwest = "0.13.2"
